--- a/abelhavalos.html
+++ b/abelhavalos.html
@@ -66,7 +66,8 @@
 
   <header>    
     <h1>Abel H Avalos</h1>
-    <p>Computer Operator | Programmer | System Analyst</p>
+    <p>Computer Operator</p>
+    <p>Programmer & System Analyst</p>
   </header>
 
   <section class="about">
