--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   <section class="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:aavalos163@gmail.com">aavalos163@gmail.com</a></p>
+    <p>Email: <a href="mailto:www.abelhavalos@gmail.com">www.abelhavalos@gmail.com</a></p>
     <p>Cell: (661) 624-0040</p>
   </section>
 
