--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Abel Avalos | Computer Specialist</title>
+  <title>Abel H Avalos | Computer Specialist</title>
   <style>
     * {
       margin: 0;
@@ -96,7 +96,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Abel Avalos. All rights reserved.
+    &copy; 2025 Abel H Avalos. All rights reserved.
   </footer>
 
 </body>
