--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
   <header>
     <img src="yo.png">        
     <h1>Abel Avalos</h1>
-    <p>Computer Operator | Programmer | System Analyst</p>
+    <p>Computer Operator</p>
+    <p>Programmer & System Analyst</p>
   </header>
 
   <section class="about">
@@ -91,7 +92,7 @@
 
   <section class="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:aavalos163@gmail.com">aavalos163@gmail.com</a></p>
+    <p>Email: <a href="mailto:www.abelhavalos@gmail.com">www.abelhavalosgmail.com</a></p>
     <p>Cell: (661) 624-0040</p>
   </section>
 
